feat: update regexp to match node_modules

--- a/packages/react-slow-reload-workaround/package.json
+++ b/packages/react-slow-reload-workaround/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-slow-reload",
+    "name": "react-slow-reload-workaround",
     "private": true,
     "version": "0.0.0",
     "description": "",
